fix: rewrite deprecated calls